tests/error/comptime/pointer_arithmetic13.bz
function test()
{
	(consteval {
		let t: [int32, int32];
		&t[1] - 1;
	});
}
